✨ Add in chips to back end
