# contract/api-contract.yaml
@@ -20,6 +20,7 @@ components:
       required:
         - homeScore
         - awayScore
+        - chip
         - matchId
         - predictionId
         - userId
@@ -32,6 +33,9 @@ components:
           description: The home team final number of goals
           type: integer
           format: int32
+        chip:
+          description: The chip that the user played
+          $ref: '#/components/schemas/chip'
         awayScore:
           description: The away team final number of goals
           type: integer
@@ -200,6 +204,13 @@ components:
       enum:
         - HOME
         - AWAY
+    chip:
+      description: A chip to modify the prediction
+      type: string
+      enum:
+        - NONE
+        - DOUBLE_POINTS
+        - ONE_GOAL_OUT
     predictionWithUser:
       type: object
       required:
@@ -370,6 +381,9 @@ paths:
                 matchId:
                   description: The matchId which is being predicted
                   type: string
+                chip:
+                  description: The chip that the user played
+                  $ref: '#/components/schemas/chip'
                 toGoThrough:
                   $ref: '#/components/schemas/toGoThrough'
               required:
